--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -12,9 +12,10 @@
       max-height: 800px;
       overflow: hidden;
       position: relative;
+      background-position: center;
+      background-size: cover;
 
       @media only screen and (max-device-width: 1024px) {
-        background-size: 170%;
         padding-top: 235px !important;
       }
 
@@ -54,7 +55,12 @@
           font-weight:bold;
 
           @media only screen and (max-device-width: 1024px) {
-            font-size: 60px !important;
+            font-size: 85px !important;
+          }
+
+          @media only screen and (max-device-width: 768px) {
+            text-align: center;
+            font-weight: bold;
           }
         }
 
@@ -63,6 +69,11 @@
 
           @media only screen and (max-device-width: 1024px) {
             font-size: 30px !important;
+          }
+
+          @media only screen and (max-device-width: 768px) {
+            text-align: center;
+            font-size: 45px !important;
           }
         }
 
@@ -116,15 +127,24 @@
 
 
     .container-fluid{
-        margin-top:20px;
-        margin-bottom:20px;
+      margin-top: 80px;
+      margin-bottom: 80px;
 
         .section-header{
           font-size: 35px ;
           margin-bottom:20px;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+            font-weight: bold;
+          }
         }
         .section-sub-header{
           font-size: 30px;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+          }
         }
     }
 
@@ -172,14 +192,16 @@
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 43px;
+            font-size: 45px;
           }
         }
 
         p{
           text-align: center;
+
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            font-size: 45px;
+            margin-bottom:40px;
           }
         }
 
@@ -210,13 +232,18 @@
 
       .button{
         position: absolute;
-        bottom:60px;
+        bottom:20px;
+
         .btn{
           background-color:#A3CB00;
           border: none;
           border-radius: 3px;
           padding: 10px 35px;
           font-size: 15px;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+          }
         }
       }
 
@@ -224,6 +251,11 @@
 
         @media only screen and (max-device-width: 1024px) {
           font-size:70px;
+        }
+
+        @media only screen and (max-device-width: 768px) {
+          font-size: 45px;
+          font-weight: bold;
         }
       }
 
@@ -237,7 +269,7 @@
           font-size:22px;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 25px;
+            font-size: 45px;
           }
         }
       }
@@ -252,6 +284,16 @@
 
         @media only screen and (max-device-width: 768px) {
           font-size: 45px;
+          font-weight: bold;
+        }
+      }
+
+      h3{
+        font-size:30px;
+
+        @media only screen and (max-device-width: 768px) {
+          font-size: 45px;
+          font-weight: bold;
         }
       }
 
@@ -259,13 +301,19 @@
         font-size:20px;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 28px;
+          font-size: 45px;
         }
       }
 
       .button{
+        margin-top:10px;
+
         a{
           font-size: 25px;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+          }
         }
       }
 
@@ -330,7 +378,7 @@
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            font-size: 45px;
           }
         }
         //
@@ -369,11 +417,20 @@
         h2{
           font-size:40px;
           text-align: center;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+            font-weight: bold;
+          }
         }
 
         p{
           font-size:30px;
           text-align: center;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+          }
         }
 
         img{
@@ -404,6 +461,10 @@
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
               padding-left:60px;
+            }
+
+            @media only screen and (max-device-width: 768px) {
+              font-size: 45px;
             }
 
             .img{
@@ -470,11 +531,20 @@
         h2{
           font-size:40px;
           text-align: center;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+            font-weight: bold;
+          }
         }
 
         p{
           font-size:30px;
           text-align: center;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 45px;
+          }
         }
 
         img{
@@ -505,6 +575,10 @@
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
               padding-left:60px;
+            }
+
+            @media only screen and (max-device-width: 768px) {
+              font-size: 45px;
             }
 
             .img{
@@ -567,23 +641,31 @@
           margin:10px 0;
           label{
             font-size:25px;
+
+            @media only screen and (max-device-width: 768px) {
+              font-size:45px;
+            }
           }
 
           textarea{
             width:100%;
             height: 200px;
-            background-color:#ADADAD;
+            background-color:#E2E2E2;
             border:none;
           }
 
           input{
             width:100%;
             color:#FFF;
-            background-color:#ADADAD;
+            background-color:#E2E2E2;
             height:50px;
             font-size:20px;
             border:none;
             padding: 1px 20px;
+
+            @media only screen and (max-device-width: 768px) {
+              font-size:45px;
+            }
 
             &::-webkit-input-placeholder {
                 color: #FFF;
@@ -598,9 +680,15 @@
           border: none;
           float: left;
           color:#FFF;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size:45px;
+            width: 100%;
+          }
         }
 
         .g-recaptcha{
+          // float: right;
           margin: 0 0 20px 0;
           div{
             margin: 0;
@@ -762,6 +850,10 @@
       margin: 40px auto;
       text-align: center;
       width: 70%;
+
+      @media only screen and (max-device-width: 768px) {
+        font-size: 45px;
+      }
     }
 
     p{
@@ -769,7 +861,7 @@
       font-size: 20px;
 
       @media only screen and (max-device-width: 768px) {
-        font-size: 28px;
+        font-size: 45px;
       }
     }
   }
