--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -50,7 +50,7 @@ button {
         padding: 10px 35px; }
       .home .jumbotron .container .button span {
         display: block;
-        font-size: 11px; }
+        font-size: 13px; }
         @media only screen and (max-device-width: 768px) {
           .home .jumbotron .container .button span {
             font-size: 45px !important; } }
@@ -178,13 +178,17 @@ button {
         font-size: 20px;
         padding-right: 40px;
         position: relative;
-        margin-bottom: 10px; }
+        margin-bottom: 40px; }
         @media only screen and (max-device-width: 1024px) {
           .home #observe .wrap .left ul li {
-            font-size: 45px; } }
+            font-size: 45px;
+            padding-right: 80px; }
+            .home #observe .wrap .left ul li img {
+              width: 60px !important; } }
         .home #observe .wrap .left ul li img {
           position: absolute;
-          top: 7px;
+          top: 50%;
+          transform: translateY(-50%);
           right: 0;
           width: 30px; }
     .home #observe .wrap .right ul {
@@ -194,13 +198,17 @@ button {
         font-size: 20px;
         padding-left: 40px;
         position: relative;
-        margin-bottom: 10px; }
+        margin-bottom: 40px; }
         @media only screen and (max-device-width: 1024px) {
           .home #observe .wrap .right ul li {
-            font-size: 45px; } }
+            font-size: 45px;
+            padding-right: 80px; }
+            .home #observe .wrap .right ul li img {
+              width: 60px !important; } }
         .home #observe .wrap .right ul li img {
           position: absolute;
-          top: 7px;
+          top: 50%;
+          transform: translateY(-50%);
           width: 30px; }
           @media only screen and (min-device-width: 1024px) {
             .home #observe .wrap .right ul li img {
@@ -436,6 +444,9 @@ nav {
         nav .nav .nav-item a:hover {
           color: #A3CB00;
           background-color: #FFF; }
+      nav .nav .nav-item:nth-child(2) a {
+        color: #A3CB00;
+        background-color: #FFF; }
       nav .nav .nav-item ul {
         list-style: none;
         padding: 0;
