--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -486,15 +486,15 @@ nav {
       nav .nav .nav-item .nav-active {
         z-index: 99; }
         nav .nav .nav-item .nav-active li {
-          padding: 30px 40px;
-          border-bottom: 2px solid #A3CB00; }
+          padding: 30px 40px; }
           nav .nav .nav-item .nav-active li:hover a {
             color: #A3CB00 !important;
             background-color: #FFF; }
       @media screen and (min-width: 768px) {
         nav .nav .nav-item:hover ul {
           height: auto;
-          width: 100%; } }
+          width: 100%;
+          border: none; } }
     @media only screen and (max-device-width: 1024px) {
       nav .nav {
         background-color: #fff;
@@ -528,7 +528,7 @@ nav {
           nav .nav .nav-item a {
             color: #000;
             padding: 30px 20px;
-            font-size: 30px; } }
+            font-size: 40px; } }
   nav .stack {
     display: none; }
   @media screen and (max-device-width: 1024px) {
@@ -1942,6 +1942,9 @@ nav {
         width: 100%; }
     .ourProducts .jumbotron .image .subcontainer {
       padding: 0 25px; }
+      @media only screen and (max-device-width: 768px) {
+        .ourProducts .jumbotron .image .subcontainer {
+          display: none; } }
     .ourProducts .jumbotron .image img {
       width: 100%; }
     .ourProducts .jumbotron .back-opacity {
@@ -1992,8 +1995,9 @@ nav {
         .ourProducts #actionalble_data div h2 {
           font-size: 45px; } }
     .ourProducts #actionalble_data div h3 {
-      font-size: 28px;
-      text-align: center; }
+      font-size: 21px;
+      text-align: center;
+      margin-top: 0; }
       @media only screen and (max-device-width: 768px) {
         .ourProducts #actionalble_data div h3 {
           font-size: 45px; } }
@@ -2012,6 +2016,19 @@ nav {
       @media only screen and (max-device-width: 768px) {
         .ourProducts #actionalble_data div img {
           padding: 0px 230px; } }
+  .ourProducts #actionalble_data .interest {
+    text-align: center; }
+    .ourProducts #actionalble_data .interest button {
+      background-color: #A3CB00;
+      font-size: 15px;
+      padding: 10px 30px;
+      margin-left: 15px;
+      border: none;
+      color: #FFF; }
+      @media only screen and (max-device-width: 768px) {
+        .ourProducts #actionalble_data .interest button {
+          font-size: 45px;
+          width: 100%; } }
   .ourProducts #work {
     background-image: url("../img/Pattern_Specialized projects.png");
     background-attachment: fixed;
