--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -107,6 +107,10 @@
 
         .subcontainer{
           padding: 0 25px;
+
+          @media only screen and (max-device-width: 768px) {
+            display: none;
+          }
         }
 
         img{
@@ -188,8 +192,9 @@
         }
 
         h3{
-          font-size: 28px;
+          font-size: 21px;
           text-align: center;
+          margin-top: 0;
 
           @media only screen and (max-device-width: 768px) {
             font-size: 45px;
@@ -219,6 +224,24 @@
         }
 
 
+      }
+
+      .interest{
+        text-align: center;
+
+        button{
+          background-color: #A3CB00;
+          font-size: 15px;
+          padding: 10px 30px;
+          margin-left: 15px;
+          border: none;
+          color:#FFF;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size:45px;
+            width: 100%;
+          }
+        }
       }
     }
 
