--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -131,6 +131,7 @@
 
         h2{
           text-align: center;
+          font-size: 25px;
 
           @media only screen and (max-device-width: 768px) {
             font-size: 45px;
