--- a/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
@@ -26,8 +26,15 @@
 
         .down{
           width:60px;
-          margin: 0 auto;
-          margin-top:70px;
+          bottom: 100px;
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+
+          @media only screen and (min-device-width: 1024px) {
+            width:30px;
+          }
+
           img{
             width:100%;
           }
@@ -124,6 +131,7 @@
 
         h2{
           text-align: center;
+          font-size: 25px;
 
           @media only screen and (max-device-width: 768px) {
             font-weight: bold;
