--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -229,6 +229,14 @@
       .interest{
         text-align: center;
 
+        h4{
+          span{
+            @media only screen and (max-device-width: 768px) {
+              font-size:45px;
+            }
+          }
+        }
+
         button{
           background-color: #A3CB00;
           font-size: 15px;
@@ -238,8 +246,10 @@
           color:#FFF;
 
           @media only screen and (max-device-width: 768px) {
+            margin-left: 0;
+            margin-top: 30px;
             font-size:45px;
-            width: 100%;
+            width: 85%;
           }
         }
       }
